LWR-268 -- css fix to help make primary nav and alternate primary nav appear in front of items like hero hangover elements. DCAS-84 -- spacing adjustments when ActionList is in a section, thats in a section. DCAS-36 -- Adjusting RulesFormatting into an Atom so it can be called in the page template. DCAS-36 -- Adjusting LegalFormatting into an Atom so it can be called in the page template.

--- a/src/stories/Organisms/Section/Section.css
+++ b/src/stories/Organisms/Section/Section.css
@@ -155,8 +155,8 @@
 }
 
 /* Drop padding when two sections of the same background are touching. */
-.section--color-default + .section--color-default .box,
-.section--color-white + .section--color-white .section__content,
+.section--color-default + .section--color-default > .box,
+.section--color-white + .section--color-white > .section__content,
 .section--color-warm-dark-x + .section--color-warm-dark-x,
 .section--color-warm-dark-xx + .section--color-warm-dark-xx,
 .section--color-primary-dark-xx-stripe + .section--color-primary-dark-xx-stripe,
@@ -166,4 +166,8 @@
 
 .section__header .brow {
   margin-block-end: var(--s-3);
+}
+
+.section__content.box .section__main .section__content.box {
+  padding-inline: 0;
 }
